# detour-rs

./: Cargo.toml  build.rs
include/: nav_mesh.h  position.h
src/: lib.rs  nav_mesh.cc
